--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     /* Общий стиль для body */
     body {
+      padding: 10px;
       background-image: url('./3.avif'); /* Указываем путь к картинке */
       background-size: cover; /* Покрывает весь экран, пропорции сохраняются */
       background-position: center; /* Центрируем изображение */
