--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       }
       .sentence {
         font-size: 1.2rem;
+        padding-top: 30px;
         padding-left: 10px; /* Меньше отступов для мобильных устройств */
         padding-right: 10px;
       }
@@ -79,6 +80,7 @@
 
       .sentence {
         font-size: 1rem;
+        padding-top: 30px;
         padding-left: 5px; /* Еще меньше отступов для маленьких экранов */
         padding-right: 5px;
       }
